# Sandtris

./: .gitignore  .gitmodules  CMakeLists.txt  CONTEXT.md  GEMINI.md  GEMINI.md.bak  README.md  add_pvs_header.py  debug_run_build.sh  perf_debug_run_build.sh  profiling result.txt  run_build.sh  run_debug_build.sh
engine/: CMakeLists.txt
engine/include/: draw.hpp  engine.hpp  random.hpp  sprite.hpp  surface.hpp  time.hpp
engine/src/: color.cpp  display.cpp  draw.cpp  math.cpp  sprite.cpp  surface.cpp  time.cpp
include/: Animation.hpp  AudioManager.hpp  BackButton.hpp  Button.hpp  Credit.hpp  CreditButton.hpp  Element.hpp  Game.hpp  GameOver.hpp  GamePlay.hpp  Grid.hpp  HTPButton.hpp  HowToPlay.hpp  Images.hpp  MainMenu.hpp  MenuButton.hpp  Option.hpp  OptionButton.hpp  OptionElement.hpp  PBButton.hpp  Pause.hpp  PauseButton.hpp  PersonalBest.hpp  QuitButton.hpp  ResumeButton.hpp  RetryButton.hpp  SFX.hpp  Sand.hpp  SaveData.hpp  Scene.hpp  SceneTransition.hpp  Slider.hpp  SplashScreen.hpp  StartButton.hpp  State.hpp  Tetrimino.hpp  TetriminoController.hpp  TetrisEvent.hpp  constant.hpp  flags.hpp  (+3 more)
include/engine/: color.cpp  color.hpp  constants.hpp  display.hpp  draw.hpp  engine.hpp  event.hpp  font.hpp  gpu_optimize.hpp  image.hpp  key.hpp  math.hpp  mixer.hpp  mouse.hpp  music.hpp  random.hpp  rect.hpp  sprite.hpp  surface.hpp  time.hpp  transform.hpp
profiling results/: Optimization note.md
profiling results/Architecture/: Architecture Optimization.md
profiling results/Redundancy/: Redundancy Optimization.md
src/: Animation.cpp  AudioManager.cpp  BackButton.cpp  Button.cpp  Credit.cpp  CreditButton.cpp  Game.cpp  GameOver.cpp  GamePlay.cpp  Grid.cpp  HTPButton.cpp  HowToPlay.cpp  Images.cpp  MainMenu.cpp  MenuButton.cpp  Option.cpp  OptionButton.cpp  OptionElement.cpp  PBButton.cpp  Pause.cpp  PauseButton.cpp  PersonalBest.cpp  QuitButton.cpp  ResumeButton.cpp  RetryButton.cpp  SFX.cpp  Sand.cpp  SaveData.cpp  Scene.cpp  SceneTransition.cpp  Slider.cpp  SplashScreen.cpp  StartButton.cpp  State.cpp  Tetrimino.cpp  TetriminoController.cpp  flags.cpp  main.cpp  scene_transitions.cpp  splash_screens.cpp  (+1 more)
src/engine/: CMakeLists.txt  color.cpp  display.cpp  draw.cpp  engine.cpp  event.cpp  font.cpp  image.cpp  key.cpp  math.cpp  mixer.cpp  mouse.cpp  music.cpp  random.cpp  rect.cpp  sprite.cpp  surface.cpp  time.cpp  transform.cpp
